# todo-list-app

./: .gitignore  Cargo.toml  README.md  TASKS.md
api/: Cargo.toml
api/migrations/: 20250615071500_create_tasks.sql
api/src/: db.rs  error.rs  lib.rs  main.rs  repository.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: flowchart.puml
frontend/: Cargo.toml
frontend/src/: lib.rs
shared/: Cargo.toml
