[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"
description = "Backend API for the Todo List application"

[lib]
name = "todo_api"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "migrate", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dotenv = "0.15"
todo-shared = { path = "../shared" }
