[package]
name = "todo-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types and functionality for the Todo List application"

[lib]
name = "todo_shared"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
